--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -66,8 +66,9 @@ body {
   margin-top: 20px;
 
   .from-group, .to-group {
-    width: 25%;
+    width: 30%;
     text-align: center;
+    font-size: 14px;
 
     img {
       width: 35px;
@@ -81,7 +82,7 @@ body {
 
   .route-indicator {
     float: left;
-    width: 50%;
+    width: 40%;
 
 
     .route-done, .route-left {
