--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -1,7 +1,8 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600);
+@import url(http://fonts.googleapis.com/css?family=Montserrat:300,400,600);
 
 
 @brand-red: #ec2432;
+@border-color: #ddd;
 
 
 .clear {
@@ -10,7 +11,7 @@
 
 
 body {
-  font-family: "Open Sans",Helvetica,Arial,sans-serif;
+  font-family: "Montserrat",Helvetica,Arial,sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 1.5;
@@ -40,118 +41,163 @@ body {
   }
 
   .title-image-overlay {
-    .gradient(#222222, transparent);
+    .gradient(transparent, rgba(0, 0, 0, 0.5));
     position: relative;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 15px;
   }
 
   .title {
-    font-size: 24px;
+    font-size: 26px;
     color: #ffffff;
+    padding-top: 65px;
   }
 
   .subtitle {
-    font-size: 16px;
+    font-size: 14px;
     color: #ffffff;
+    line-height: 0.9;
   }
 }
 
 
 .order-summary {
+  background-color: @brand-red;
+  color: white;
+  overflow: hidden;
+
   .order-total {
+    padding-top: 20px;
+    text-align: left;
+    font-size: 16px;
+    padding: 10px 15px;
+    color: white;
+    overflow: hidden;
     float: left;
-    width: 40%;
+    width: 70%;
+    //border-top: 2px solid white;
   }
 
   .order-price {
     float: left;
     width: 30%;
+    text-align: right;
+    font-size: 16px;
+    padding: 10px 15px;
   }
 
   .order-button {
-    float: left;
-    background-color: @brand-red;
-    color: #ffffff;
-    width: 30%;
+    padding-top: 20px;
+    text-align: left;
+    font-size: 18px;
+    padding: 10px 15px;
+    background-color: darken(@brand-red,10%);
+    color: white;
+    overflow: hidden;
+    width: 100%;
     text-align: center;
   }
 }
 
 
+.mini-label {
+  font-size: 11px;
+  line-height: 0.9;
+}
+
 .route {
-  margin-top: 20px;
+  padding-bottom: 15px;
+  background-color: @brand-red;
+  color: white;
+  overflow: hidden;
 
   .from-group, .to-group {
-    width: 30%;
-    text-align: center;
-    font-size: 14px;
+    width: 50%;
 
-    img {
-      width: 35px;
-      height: 35px;
+    .start-name {
+      font-size: 14px;
     }
   }
 
   .from-group {
     float: left;
+    text-align: left;
+    padding-left: 15px;
   }
 
   .route-indicator {
-    float: left;
-    width: 40%;
-
-
-    .route-done, .route-left {
-      height: 20px;
-      float: left;
-    }
-
+    height: 8px;
+    background-color: white;
+    border-radius: 4px;
+    position: relative;
+    margin: 0 15px;
+    margin-bottom: 10px;
 
     .route-done {
-      width: 80%;
-      background-color: #666666;
-    }
-
-    .route-left {
-      background-color: @brand-red;
-      width: 20%;
+      height: 4px;
+      width: 40%;
+      position: absolute;
+      float: right;
+      margin: 2px;
+      background-color: darken(@brand-red, 10%);
+      border-radius: 4px;
     }
 
   }
 
   .to-group {
-    float: left;
+    float: right;
+    text-align: right;
+    padding-right: 15px;
   }
 }
 
 .eta {
-  margin-top: 20px;
-  text-align: center;
-  font-size: 20px;
+  padding-top: 20px;
+  text-align: left;
+  font-size: 18px;
+  padding: 10px 15px;
+  background-color: darken(@brand-red,10%);
+  color: white;
+  overflow: hidden;
 
   .label {
     float: left;
-    width: 40%;
+    width: 50%;
   }
 
   .time-select {
     float: right;
-    width: 60%;
+    text-align: right;
+    width: 50%;
   }
 }
 
 .shop-index {
-  margin-top: 20px;
   text-align: center;
+  margin-top: 30px;
 
   .shop-item {
     float: left;
-    margin: 20px;
-    border: 2px solid #333333;
+    width: 50%;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 15px;
+    border-top: 1px solid @border-color;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .shop-item:nth-child(odd) {
+    //border-left: 1px solid @border-color;
   }
 }
 
@@ -159,40 +205,53 @@ body {
 .product-index {
   margin-top: 20px;
   text-align: center;
+  border-bottom: 1px solid @border-color;
 
   .product-item {
     vertical-align: middle;
-    line-height: 40px;
-    border: 2px solid #333333;
-    height: 45px;
-    margin-bottom: 10px;
-    font-size: 20px;
+    line-height: 60px;
+    border-top: 1px solid @border-color;
+    height: 60px;
+    font-size: 14px;
 
     .name {
       float: left;
       width: 70%;
       text-align: left;
-      padding-left: 10px;
+      padding-left: 15px;
 
-      .count {
-        float: right;
-        width: 25px;
-        height: 25px;
-        background-color: #cccccc;
-        text-align: center;
-        font-size: 16px;
-        line-height: 24px;
-        margin-top: 6px;
-        margin-right: 10px;
-      }
+
+    }
+    .price {
+      float: right;
+      font-size: 12px;
+    }
+  }
+
+  .product-select {
+    overflow: hidden;
+    width: 30%;
+    padding-right: 15px;
+    text-align: right;
+
+    .fa {
+      color: darken(@border-color, 0%);
+      line-height: 60px;
+      font-size: 38px;
     }
 
-    .price {
-      float: left;
-      width: 30%;
-      border-left: 2px solid #333333;
-      color: #ffffff;
-      background-color: @brand-red;
+    .count {
+        background-color: @brand-red;
+        border-radius: 3px;
+        color: #fff;
+        text-align: center;
+        font-size: 12px;
+        line-height: 20px;
+        padding: 0 8px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: 10px;
+        float: left;
     }
   }
 }
@@ -205,16 +264,14 @@ body {
   bottom: 0;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: @brand-red;
 
-  &-overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
+  .order-thanks {
+    color: white;
+    padding: 30px 15px;
+    padding-top: 60px;
+    font-size: 18px;
     text-align: center;
-
-    .gradient(#222222, transparent);
   }
 
   .waiting-text, .pickup-text {
@@ -222,7 +279,8 @@ body {
     text-align: center;
     padding-left: 20px;
     padding-right: 20px;
-    font-size: 20px;
+    font-size: 16px;
+    background-color: darken(@brand-red, 10%);
   }
 
   .waiting-text {
@@ -233,25 +291,35 @@ body {
   }
 
   .map {
-    margin-top: 40px;
-    width: 90%;
-    margin-left: 10px;
-    margin-right: 10px;
+    width: 100%;
   }
 
   .pickup-text {
-    margin-top: 100px;
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
 }
 
 
 .content {
-  padding: 10px;
-  color: #222222;
+  color: #333;
   font-size: 24px;
+}
+
+.content-subtitle {
+  text-transform: uppercase;
+  font-size: 12px;
+  text-align: left;
+  padding: 0 15px 15px 15px;
 }
 
 
 .picked-up {
   opacity: 0.5;
+}
+
+.order-subtitle {
+  color: #999;
+  text-transform: uppercase;
+  font-size: 12px;
 }
